@@ -143,14 +143,14 @@ namespace GtkDemo
   <Attributes />
   <Members>
     <Member MemberName="Write">
-      <MemberSignature Language="C#" Value="public bool Write (byte [] buf, uint count);" />
+      <MemberSignature Language="C#" Value="public bool Write (byte [] buf, ulong count);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
         <ReturnType>System.Boolean</ReturnType>
       </ReturnValue>
       <Parameters>
-        <Parameter Name="buf" Type="System.Byte []" />
-        <Parameter Name="count" Type="System.UInt32" />
+        <Parameter Name="buf" Type="System.Byte[]" />
+        <Parameter Name="count" Type="System.UInt64" />
       </Parameters>
       <Docs>
         <summary>Parses the next count bytes of image data from buffer buf.</summary>
