@@ -113,14 +113,14 @@
       </Docs>
     </Member>
     <Member MemberName="Write">
-      <MemberSignature Language="C#" Value="public bool Write (byte [] buf, uint count);" />
+      <MemberSignature Language="C#" Value="public bool Write (byte [] buf, ulong count);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
         <ReturnType>System.Boolean</ReturnType>
       </ReturnValue>
       <Parameters>
         <Parameter Name="buf" Type="System.Byte[]" />
-        <Parameter Name="count" Type="System.UInt32" />
+        <Parameter Name="count" Type="System.UInt64" />
       </Parameters>
       <Docs>
         <summary>Loads the next <paramref name="count" /> bytes</summary>
