@@ -1,5 +1,10 @@
 2005-03-10  Mike Kestner  <mkestner@novell.com>
 
+	* generator/SymbolTable.cs : fix gssize and gsize, they aren't 32 bit
+	like the docs say they are.
+
+2005-03-10  Mike Kestner  <mkestner@novell.com>
+
 	* glib/Marshaller.cs : don't use g_utf8_strlen to determine the byte
 	count to be copied, it returns chars, not bytes.
 	* glib/glue/unichar.c : implement a quick and dirty strlen glue func.
